--- a/machine-learning/regression_linear/regression_linear_polinomial_casas_v2.ipynb
+++ b/machine-learning/regression_linear/regression_linear_polinomial_casas_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZXDmRaNDkLEwJUzFm+931",
+      "authorship_tag": "ABX9TyPX68y4VVyW7/3qfpFwv8UR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import pandas as pd"
       ],
       "execution_count": 0,
       "outputs": []
