--- a/inteligencia_artificial_sistemas_recomendacao_python_v1.ipynb
+++ b/inteligencia_artificial_sistemas_recomendacao_python_v1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZXDmRaNDkLEwJUzFm+931",
+      "authorship_tag": "ABX9TyPP7ohnUwN/mT4wVn4HeK5F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,176 @@
       "cell_type": "code",
       "metadata": {
         "id": "4ZAsPTv9MaT0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from recomendacoes import avaliacoes"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wXUZnogP1U4M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ccd45b3a-20a8-454b-c185-736b679c1e70"
+      },
+      "source": [
+        "avaliacoes['Ana']['Star Trek']"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yCT--3Rr1bgO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6c4e905f-fe8b-4764-bb34-ed4cdee8a0f8"
+      },
+      "source": [
+        "avaliacoes['Pedro']['Star Wars']"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TFCakumm1iay",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5f8cc9e1-81e2-421d-ec97-723aa6a8de74"
+      },
+      "source": [
+        "avaliacoes['Marcos']['Exterminador do Futuro']"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bArTeMX31pmN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "ca7a1f58-e10e-483c-8bbf-138381ed4306"
+      },
+      "source": [
+        "avaliacoes['Claudia']"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Exterminador do Futuro': 4.0,\n",
+              " 'Norbit': 2.5,\n",
+              " 'O Ultimato Bourne': 3.5,\n",
+              " 'Star Trek': 3.0,\n",
+              " 'Star Wars': 4.5}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eRsYLeKZ121e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "7c3a23d8-81be-417b-fac4-c5d0f788e719"
+      },
+      "source": [
+        "avaliacoes['Pedro']"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Exterminador do Futuro': 3.5,\n",
+              " 'Freddy x Jason': 2.5,\n",
+              " 'O Ultimato Bourne': 3.0,\n",
+              " 'Star Wars': 4.0}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mmnv34QJ2AHi",
         "colab_type": "code",
         "colab": {}
       },
